Попытка добавить обобщения